# speck

./: Cargo.toml  README.md  devbox.json  pyproject.toml
src/: cli.rs  config.rs  main.rs
src/speck/: __init__.py  config.py  main.py  utils.py
src/speck/dotfiles/: __init__.py  commands.py
src/speck/repos/: __init__.py  commands.py
